<resources>
    <string name="app_name">RNG</string>
    <string name="title_activity_wheel_of_rng">Wheel Of RNG</string>
    <string name="wheel_of_rng">Wheel of RNG</string>
    <string name="dice">Dice</string>
    <string name="random_number">Random Number</string>
    <string name="spin_the_bottle">Spin The Bottle</string>
    <string name="about">About</string>
    <string name="dice_select">Number of dice:</string>
    <string name="dice_number">#</string>
    <string name="ROLL">ROLL</string>
    <string name="dice_type">Dice Type:</string>
    <string name="sum">Sum:</string>
    <string name="rng_it">RNG it</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="tap_to_spin">Tap the bottle to spin!</string>
    <string name="add_item_here">Add item here!</string>
    <string name="add">ADD</string>
    <string name="import_list_item_menu">Import List</string>
    <string name="export_list">Export List</string>
    <string name="clear_list">Clear List</string>
    <string name="spin">SPIN</string>
</resources>
