<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="4.0">

    <Button
        android:id="@+id/wheel"
        android:onClick="wheelOfRNG_OnClick"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="30sp"

        android:background="@drawable/wheel_of_rng_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1.0"
        android:text="@string/wheel_of_rng" />

    <Button
        android:id="@+id/dice"
        android:onClick="dice_OnClick"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="30sp"

        android:background="@drawable/dice_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/dice" />

    <Button
        android:id="@+id/random_number"
        android:onClick="randomNumber_OnClick"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="30sp"

        android:background="@drawable/random_number_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/random_number" />

    <Button
        android:id="@+id/random_password"
        android:onClick="randomPassword_OnClick"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textSize="30sp"

        android:background="@drawable/random_password_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/spin_the_bottle" />
</LinearLayout>
