<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".WheelOfRNGActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/wheel_of_rng_button_holder"
        android:scrollbars="vertical"
        android:background="@drawable/wheel_of_rng_list_border"/>

    <LinearLayout
        android:id="@+id/wheel_of_rng_button_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/editText_list_wheel"
        android:layout_marginVertical="10dp">

        <Button
            android:id="@+id/wheel_of_rng_spin_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:height="60dp"
            android:onClick="spinTheWheel_OnClick"
            android:text="@string/spin"
            android:layout_weight=".5">
        </Button>

        <Button
            android:id="@+id/wheel_of_rng_add_button"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:height="60dp"
            android:onClick="add_OnClick"
            android:layout_width="0dp"
            android:layout_weight=".5"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editText_list_wheel"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wheel_of_rng_rounded_cell"
        android:inputType="textPersonName"
        android:hint="@string/add_item_here"
        android:textColor="@color/offWhite"
        android:textAlignment="textStart"
        android:textSize="34sp"
        android:maxLength="25"
        android:paddingHorizontal="10dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>