<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    tools:context=".DiceActivity">

    <TextView
        android:id="@+id/dice_type_text"
        android:text="@string/dice_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_above="@id/dice_select"
        android:layout_marginBottom="20dp"/>

    <Spinner
        android:id="@+id/dice_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dice_type_text"
        android:layout_toEndOf="@+id/dice_type_text"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/dice_select"
        android:text="@string/dice_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_above="@id/seekBar"/>

    <TextView
        android:id="@+id/dice_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/dice_number"
        android:layout_toEndOf="@+id/dice_select"
        android:layout_alignBottom="@+id/dice_select"
        android:layout_marginStart="20dp"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayoutRollButton"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="10dp"
        android:max="9"
        android:progress="4"
        android:layout_marginVertical="10dp" />

    <LinearLayout
        android:id="@+id/linearLayoutRollButton"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/rollButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ROLL"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_weight="1" />

    </LinearLayout>

    <ImageView
        android:id="@+id/resultOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/resultTwo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/resultThree"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultOne"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/resultFour"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultTwo"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/resultFive"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultThree"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultFour"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultSix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/resultSeven"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultOne"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/resultEight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultSix"
        app:layout_constraintTop_toBottomOf="@id/resultOne"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultEight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/resultNine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultSeven"
        app:layout_constraintTop_toBottomOf="@id/resultOne"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultNine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/resultTen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultEight"
        app:layout_constraintTop_toBottomOf="@id/resultOne"
        app:srcCompat="@drawable/d6_1" />

    <ImageView
        android:id="@+id/resultTen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="4dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resultNine"
        app:layout_constraintTop_toBottomOf="@id/resultOne"
        app:srcCompat="@drawable/d6_1" />

</RelativeLayout>